[gd_scene load_steps=4 format=3 uid="uid://buadl8qajcd1b"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_mun4a"]
[ext_resource type="Texture2D" uid="uid://dckipshsa2jrl" path="res://assets/sprites/weapons/pizza_jam_flipflop.png" id="1_pi7w6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8mfnc"]
atlas = ExtResource("1_pi7w6")
region = Rect2(8, 7, 18, 17)

[node name="HUD" type="CanvasLayer"]
visible = false
script = ExtResource("1_mun4a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
show_percentage = false

[node name="FlipFlop1" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_8mfnc")
expand_mode = 2
stretch_mode = 6

[node name="FlipFlop2" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_8mfnc")
expand_mode = 2
stretch_mode = 4

[node name="FlipFlop3" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_8mfnc")
expand_mode = 2
stretch_mode = 4
